--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,6 @@
     <modules>
         <module>deployment</module>
         <module>runtime</module>
+        <module>getting-started</module>
     </modules>
 </project>
