--- a/getting-started/pom.xml
+++ b/getting-started/pom.xml
@@ -21,7 +21,7 @@
         <!-- Add my-ext -->
         <dependency>
             <groupId>me.snowdrop</groupId>
-            <artifactId>quarkus-my-ext</artifactId>
+            <artifactId>quarkus-my-ext-deployment</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
