fix: Rename the project to application and add as workaround a dependency

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,6 @@
     <modules>
         <module>runtime</module>
         <module>deployment</module>
-        <module>getting-started</module>
+        <module>application</module>
     </modules>
 </project>
