--- a/application/pom.xml
+++ b/application/pom.xml
@@ -9,9 +9,9 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quarkus-my-ext-getting-started</artifactId>
+    <artifactId>quarkus-my-ext-application</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Snowdrop - My Extension - Getting Started</name>
+    <name>Snowdrop - My Extension - Application</name>
 
     <dependencies>
         <dependency>
@@ -21,8 +21,16 @@
         <!-- Add my-ext -->
         <dependency>
             <groupId>me.snowdrop</groupId>
+            <artifactId>quarkus-my-ext</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- Workaround to force a build for a multi-maven project -->
+        <dependency>
+            <groupId>me.snowdrop</groupId>
             <artifactId>quarkus-my-ext-deployment</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- Test -->
