chore: Move plugin definition to the parent POM

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -55,6 +55,7 @@
                 <version>${quarkus.version}</version>
                 <executions>
                     <execution>
+                        <id>build</id>
                         <goals>
                             <goal>build</goal>
                         </goals>
