--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -3,8 +3,9 @@
 #
 quarkus.log.console.enable=true
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
-quarkus.log.console.level=INFO
+quarkus.log.console.level=DEBUG
 quarkus.log.console.color=true
 
-quarkus.log.category."me.snowdrop".level=DEBUG
-quarkus.log.category."io.quarkus".level=DEBUG
+#quarkus.log.category."me.snowdrop".level=DEBUG
+#quarkus.log.category."io.quarkus".level=DEBUG
+quarkus.log.category."org.jboss.resteasy".level=DEBUG
